@@ -1,0 +1,9 @@
+CREATE TABLE workflow(
+     id INTEGER PRIMARY KEY AUTOINCREMENT,
+     description TEXT NOT NULL,
+     date DATE NOT NULL DEFAULT CURRENT_DATE,
+     keep BOOLEAN NOT NULL DEFAULT false,
+     failed TEXT NOT NULL DEFAULT '');
+
+ALTER TABLE job ADD COLUMN workflow_id
+REFERENCES workflow (id) ON DELETE CASCADE;
